--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
             <div class="tabs">
                 <button class="tab-link active" data-tab="recordings-tab">Записи</button>
                 <button class="tab-link" data-tab="settings-tab">Настройки</button>
-                <button class="tab-link" data-tab="contacts-tab">Участники <span id="selected-contacts-count"></span></button>
+                <button class="tab-link" data-tab="contacts-tab">Голоса&nbsp;<span id="selected-contacts-count"></span></button>
             </div>
 
             <div id="recordings-tab" class="tab-content active">
@@ -116,7 +116,7 @@
                     </div>
 
                     <div class="settings-group collapsed">
-                        <h4 class="settings-group-header"><span class="expand-icon"></span>Правила для файлов контекста</h4>
+                        <h4 class="settings-group-header"><span class="expand-icon"></span>Правила для файлов</h4>
                         <div class="settings-group-content">
                             <div class="prompt-info">
                                 <p>Здесь можно настроить, какие файлы из папки с записью будут добавлены в контекст. В шаблоне имени файла можно использовать:</p>
