--- a/static/css/style.css
+++ b/static/css/style.css
@@ -336,6 +336,7 @@ h1, h2, h3, h4 {
     border-radius: 8px;
     background-color: #fdfdfd;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.05); /* Добавляем тень со смещением по X и Y */
+    transition: background-color 0.2s ease-in-out; /* Плавный переход для фона */
 }
 
 .week-group h4 {
@@ -343,7 +344,7 @@ h1, h2, h3, h4 {
     margin-top: 0;
     margin-bottom: 0; /* Убираем нижний отступ, будем управлять им через padding */
     cursor: pointer;
-    padding: 15px; /* Устанавливаем единый внутренний отступ */
+    padding: 8px; /* Устанавливаем единый внутренний отступ */
     border-radius: 8px; /* Скругляем углы, как у родителя */
     transition: background-color 0.2s; /* Плавный переход */
     display: flex;
@@ -361,9 +362,8 @@ h1, h2, h3, h4 {
 .week-number {
     color: #7f8c8d; /* Делаем цвет менее контрастным */
 }
-/* В развернутом состоянии добавляем нижний отступ и видимую рамку */
 .week-group:not(.collapsed) h4 {
-    /* Убираем все изменения, чтобы заголовок не "прыгал" */
+    background-color: #ecf0f1;
 }
 
 /* Подсветка при наведении */
