--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@
                         <div class="recording-table">
                             <div class="recording-table-header">
                                 <div class="recording-cell cell-time">Начало</div>
-                                <div class="recording-cell cell-duration">Длительность</div>
+                                <div class="recording-cell cell-duration">Длит.</div>
                                 <div class="recording-cell cell-title">Наименование</div>
                                 <div class="recording-cell cell-files">Файлы</div>
                             </div>
