--- a/templates/index.html
+++ b/templates/index.html
@@ -194,7 +194,7 @@
         </main>
     </div>
 
-    <!-- Модальное окно для подтверждения настроек -->
+    <!-- Модальное окно для настроек -->
     <div id="confirmation-modal" class="modal-overlay" style="display: none;">
         <div class="modal-content">
             <div class="modal-header">
