add container parameter to contact group functions for modal support

--- a/templates/index.html
+++ b/templates/index.html
@@ -206,15 +206,15 @@
             </div>
             <div class="modal-body">
                 <div class="modal-column" id="modal-settings-col">
-                    <h4>Настройки</h4>
+                    <!-- <h4>Настройки</h4> -->
                     <!-- Содержимое #settings-tab будет скопировано сюда -->
                 </div>
                 <div class="modal-column" id="modal-contacts-col">
-                    <h4>Участники</h4>
+                    <!-- <h4>Участники <span id="modal-selected-contacts-count" class="selected-count"></span></h4> -->
                     <!-- Содержимое #contacts-tab будет скопировано сюда -->
                 </div>
                 <div class="modal-column" id="modal-preview-col">
-                    <h4>Предпросмотр</h4>
+                    <!-- <h4>Предпросмотр</h4> -->
                     <!-- Содержимое #prompt-preview-container будет скопировано сюда -->
                 </div>
             </div>
