--- a/templates/index.html
+++ b/templates/index.html
@@ -210,7 +210,7 @@
                     <!-- Содержимое #settings-tab будет скопировано сюда -->
                 </div>
                 <div class="modal-column" id="modal-contacts-col">
-                    <!-- <h4>Участники <span id="modal-selected-contacts-count" class="selected-count"></span></h4> -->
+                    <!-- <h4>Голоса <span id="modal-selected-contacts-count" class="selected-count"></span></h4> -->
                     <!-- Содержимое #contacts-tab будет скопировано сюда -->
                 </div>
                 <div class="modal-column" id="modal-preview-col">
