add_file: use active meeting template to set recording title

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
             <button id="rec-btn" class="control-btn rec-btn">REC</button>
             <button id="pause-btn" class="control-btn pause-btn" disabled>PAUSE</button>
             <button id="stop-btn" class="control-btn stop-btn" disabled>STOP</button>
-            <button id="add-file-btn" class="control-btn add-file-btn">+ Файл</button>
+            <button id="add-file-btn" class="control-btn add-file-btn">+&nbsp;Файл</button>
             <input type="file" id="file-upload-input" accept="audio/*" style="display: none;">
             <button id="pip-btn" class="control-btn pip-btn" title="Картинка в картинке">&#x25ad;</button>
         </div>
